--- a/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
@@ -46,7 +46,7 @@
 								<!-- 메인 -->
 								<img class="small small1" th:if="${not #strings.isEmpty(result.work.workMainImgUrl)}" th:src="${result.work.workMainImgUrl}" />
 								<!-- 전면 -->
-								<!-- <img class="small small1" th:if="${not #strings.isEmpty(result.work.workImgFrtUrl)}" th:src="${result.work.workImgFrtUrl}" /> -->
+								<img class="small small1" th:if="${not #strings.isEmpty(result.work.workImgFrtUrl)}" th:src="${result.work.workImgFrtUrl}" />
 								<!-- 후면 -->
 								<img class="small small1" th:if="${not #strings.isEmpty(result.work.workImgRerUrl)}" th:src="${result.work.workImgRerUrl}" />
 								<!-- 좌 -->
@@ -362,7 +362,7 @@
 						<!-- 메인 -->
 						<img class="small small2" th:if="${not #strings.isEmpty(result.work.workMainImgUrl)}" th:src="${result.work.workMainImgUrl}" />
 						<!-- 전면 -->
-						<!-- <img class="small small2" th:if="${not #strings.isEmpty(result.work.workImgFrtUrl)}" th:src="${result.work.workImgFrtUrl}" /> -->
+						<img class="small small2" th:if="${not #strings.isEmpty(result.work.workImgFrtUrl)}" th:src="${result.work.workImgFrtUrl}" />
 						<!-- 후면 -->
 						<img class="small small2" th:if="${not #strings.isEmpty(result.work.workImgRerUrl)}" th:src="${result.work.workImgRerUrl}" />
 						<!-- 좌 -->
