이미지 스케이링 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -37,7 +37,7 @@
 									</div>
 								</div>
 							<div class="myd-box">
-								<div class="myd-img">
+								<div class="myd-img baeg-left">
 									<img th:src="${result.dealInfo.workMainImgUrl}" />
 								</div>
 								<div class="myd-2">
