--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -10,6 +10,9 @@
     		.con-left{display:none}
     	}
     </style>
+    
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
+    
 </head>
 <body>
 	<div class="wrap">
