--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -11,6 +11,9 @@
     	}
     	
     </style>
+    
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
+    
 </head>
 
 <body>
