--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -8,6 +8,8 @@
     		.con-left{display:none}
     	}
     </style>
+    
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
