--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -1655,8 +1655,16 @@ function dealReg(){
 	        contentType : false,
 	        processData : false,
 	        success: function(data) {
-	        	if(data > 0 || data != null || data != ""){
+	        	if(data > 0){
 	        		event(result.work.workTypCd);
+	        	}
+	        	if(data == -2){
+	        		if(result.work.workTypCd == "COLL"){
+	        			modalAlertShow("해당 작품은 이미 거래 등록 되어있습니다.", "myCollection");
+	        		}
+	        		if(result.work.workTypCd == "WORK"){
+	        			modalAlertShow("해당 작품은 이미 거래 등록 되어있습니다.", "myWork");
+	        		}
 	        	}
 	        },
 	        error: function(error) {
