--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -453,6 +453,14 @@
 	</div>
 </div>
 <script th:inline="javascript">
+$(function(){
+	const url = new URL(window.location.href);
+	const urlParam = url.searchParams;
+	if(sMbrSqVal != urlParam.get('mbrSq')){
+		modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
+	}
+});
+
 var result = /*[[${result}]]*/ 'default';
 var amount = 0; //할인 전 금액
 var disc = 0; //할인할 금액
