--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -104,7 +104,7 @@
 					<nav>
 						<li><a href="/deal">Deal</a></li>
 						<!-- <li><a href="/insights"><img src="resources/img/mgz/link-text.png" class="link-text" /></a></li> -->
-						<li><a href="#">Magazine<span style="color:#ea5514;">9</span></a></li>
+						<li><a href="/insights">Magazine<span style="color:#ea5514;">9</span></a></li>
 						<li><a href="/artist">Artist Library</a></li>
 						<li><a href="/serviceIntro">About</a></li>
 					</nav>
