페이스북 관련 head 추가

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -3850,6 +3850,11 @@ display: none;}
 	color: #e9625c;
 	padding-left: 1.5rem;
 }
+.c-reds2{
+	font-size: 2.3rem;
+	color: #e9625c;
+	padding-left: 1.5rem;
+}
 .c-gra{
     font-size: 2rem;
     color: #333333;
