--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -2,8 +2,15 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!-- <script src="https://api-std.mainpay.co.kr/js/mainpay.pc-1.1.js"></script> -->
 <head>
-	<meta charset="utf-8">
 	<title>딜링아트</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="theme-color" content="#000000">
+	<meta name="description" content="">
+	<meta name="author" content="">
 	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
 	<meta name="description" content="개인간 미술품 거래 마켓플레이스">
 	<meta property="og:description" content="개인간 미술품 거래 마켓플레이스">
@@ -12,10 +19,15 @@
 	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
 	<meta property="og:url" content="https://www.dealing-art.com">
 	
-	
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- google -->
+    <meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
+    <!-- faceBook -->
+    <meta name="facebook-domain-verification" content="zrw9l0gyn4u5jja4qv7kpleb4i914k" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 	<!-- HTML의 <head> 섹션에 전체 사이트 태그를 복사합니다. -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WRJBSR52MT"></script>
+	
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
@@ -25,19 +37,21 @@
 	</script>
 	
 	<!-- Google Tag Manager -->
-	<!-- 페이지의 <head>에서 가능한 한 높은 위치에 코드를 붙여넣으세요. --!>
+	<!-- 페이지의 <head>에서 가능한 한 높은 위치에 코드를 붙여넣으세요. -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-NBP5CQ9');</script>
 	<!-- End Google Tag Manager -->
-	
+			
 	<!-- Google Tag Manager (noscript) -->
 	<!-- 또한 여는 <body> 태그 바로 뒤에 코드를 붙여넣으세요. -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBP5CQ9"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<noscript>
+		<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBP5CQ9"height="0" width="0" style="display:none; visibility:hidden"></iframe>
+	</noscript>
 	<!-- End Google Tag Manager (noscript) -->
+	
 	
 	<!-- 페이스북 Meta Pixel Code -->
 	<script>
@@ -52,10 +66,10 @@
 	  fbq('init', '5995234030505207');
 	  fbq('track', 'PageView');
 	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	  src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"
-	/></noscript>
-	
+	<noscript>
+		<img height="1" width="1" style="display:none"src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"/>
+	</noscript>
+    
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.swi-box::before{background-color:#f9f9f9;}
@@ -73,10 +87,7 @@
     	};
     </style>
     
-    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
-    
-	
-    
+    <link rel="icon" type="image/png" href="resources/img/favicon.png">
 </head>
 
 <body>
@@ -161,6 +172,21 @@
 									<th>호수</th>
 									<td th:utext="|${result.deal.workLake} 
 									<img src='/resources/img/ba/me-icon.png' style='cursor:pointer;' onclick='openLakeHelp()'></img>|"></td>
+								</tr>
+								<tr>
+									<th>메인 컬러</th>
+									<td th:if="${result.deal.workClrCd == 'MIX'}"><div class="color-box"><input type="radio" id="mc-1" name="workClrCd" value="MIX" checked><label for="mc-1" class="mc-1 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'RED'}"><div class="color-box"><input type="radio" id="mc-2" name="workClrCd" value="RED" checked><label for="mc-2" class="mc-2 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'ORANGE'}"><div class="color-box"><input type="radio" id="mc-3" name="workClrCd" value="ORANGE" checked><label for="mc-3" class="mc-3 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'YELLOW'}"><div class="color-box"><input type="radio" id="mc-4" name="workClrCd" value="YELLOW" checked><label for="mc-4" class="mc-4 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'GREEN'}"><div class="color-box"><input type="radio" id="mc-5" name="workClrCd" value="GREEN" checked><label for="mc-5" class="mc-5 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'SKY'}"><div class="color-box"><input type="radio" id="mc-6" name="workClrCd" value="SKY" checked><label for="mc-6" class="mc-6 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'BLUE'}"><div class="color-box"><input type="radio" id="mc-7" name="workClrCd" value="BLUE" checked><label for="mc-7" class="mc-7 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'PURPLE'}"><div class="color-box"><input type="radio" id="mc-8" name="workClrCd" value="PURPLE" checked><label for="mc-8" class="mc-8 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'BROWN'}"><div class="color-box"><input type="radio" id="mc-9" name="workClrCd" value="BROWN" checked><label for="mc-9" class="mc-9 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'WHITE'}"><div class="color-box"><input type="radio" id="mc-10" name="workClrCd" value="WHITE" checked><label for="mc-10" class="mc-10 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'GRAY'}"><div class="color-box"><input type="radio" id="mc-11" name="workClrCd" value="GRAY" checked><label for="mc-11" class="mc-11 active"></label></div></td>
+									<td th:if="${result.deal.workClrCd == 'BLACK'}"><div class="color-box"><input type="radio" id="mc-12" name="workClrCd" value="BLACK" checked><label for="mc-12" class="mc-12 active"></label></div></td>
 								</tr>
 								<tr>
 									<th>닉네임</th>
