--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -3540,6 +3540,11 @@ display: inline-block;margin-left: 13px;}
 	color: #e9625c;
 	padding-left: 15px;
 }
+.c-reds2{
+	font-size: 14px;
+	color: #e9625c;
+	padding-left: 15px;
+}
 .c-gra{
     font-size: 12px;
     color: #333333;
