--- a/src/main/resources/templates/thymeleaf/fo/about/notice_detail.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/notice_detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 	<title>딜링아트</title>
@@ -19,28 +19,15 @@
 	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
 	<meta property="og:url" content="https://www.dealing-art.com">
 	
-	<link type="text/css" rel="stylesheet" href="../common/css/font.css" />
-	<link type="text/css" rel="stylesheet" href="../common/css/swiper-bundle.min.css" />
-	<link type="text/css" rel="stylesheet" href="../common/css/bootstrap.min.css">
-	<link type="text/css" rel="stylesheet" href="../common/css/common_pc.css">
-	<link type="text/css" rel="stylesheet" href="../common/css/bootstrap-select.css">
-	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="../common/css/ui_mo.css" />
-	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="../common/css/ui_tablet.css" />
-	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="../common/css/ui_pc.css" />
-
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script type="text/javascript" src="../common/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script type="text/javascript" src="../common/js/bootstrap-select.js"></script>
-    <script src="./jquery-ui-1.12.1/datepicker-ko.js"></script>
-    
-	 <!-- google -->
+	<!-- google -->
     <meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
-    
+    <!-- faceBook -->
+    <meta name="facebook-domain-verification" content="zrw9l0gyn4u5jja4qv7kpleb4i914k" />
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<!-- HTML의 <head> 섹션에 전체 사이트 태그를 복사합니다. -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WRJBSR52MT"></script>
+	
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
@@ -50,7 +37,7 @@
 	</script>
 	
 	<!-- Google Tag Manager -->
-	<!-- 페이지의 <head>에서 가능한 한 높은 위치에 코드를 붙여넣으세요. --!>
+	<!-- 페이지의 <head>에서 가능한 한 높은 위치에 코드를 붙여넣으세요. -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -60,8 +47,9 @@
 			
 	<!-- Google Tag Manager (noscript) -->
 	<!-- 또한 여는 <body> 태그 바로 뒤에 코드를 붙여넣으세요. -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBP5CQ9"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<noscript>
+		<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBP5CQ9"height="0" width="0" style="display:none; visibility:hidden"></iframe>
+	</noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	
 	
@@ -78,77 +66,24 @@
 	  fbq('init', '5995234030505207');
 	  fbq('track', 'PageView');
 	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	  src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"
-	/></noscript>
+	<noscript>
+		<img height="1" width="1" style="display:none"src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"/>
+	</noscript>
     
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
-    	@media screen and (min-width: 1px) and (max-width: 1536px){
-    		.con-left{display:none}
-    	}
+    	.swi-box::before{background-color:#f9f9f9;}
+    	.footer-wrap{margin-top:0;}
+    	.hd-div{background-color:#fff;}
+    	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
-    
+    <link rel="icon" type="image/png" href="resources/img/favicon.png">
 </head>
 
 <body>
 	<div class="wrap">
-		<div class="head-wrap">
-			<div class="head">
-				<div class="h-logo"><a href="#"><img src="../common/img/logo.png" /></a></div>
-				<div class="h-gnb">
-					<div class="navbox">
-						<nav>
-							<li><a href="#">Deal</a></li>
-							<li><a href="#">Megazine</a></li>
-							<li><a href="#">Artist Library</a></li>
-							<li><a href="#">About</a></li>
-						</nav>
-					</div>
-					
-					<!-- 로그인전 -->
-					<div class="login-hide h-text"  style="display:none;">
-						<span>LOGIN</span>
-						<span>JOIN</span>
-					</div>
-					
-					<!-- 로그인후 -->
-					<div class="login-show h-img">
-						<span class="sog-1"><a href="#"><img src="../common/img/icon-1.png" /></a></span>
-						<span class="sog-2 lg-my"><a href="#"><img src="../common/img/icon-2.png" /></a></span>
-						<div class="s-hov">
-							<ul>
-								<li><a href="#"><img src="../common/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
-								<li><a href="#"><img src="../common/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
-								<li><a href="#"><img src="../common/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
-								<li><a href="#"><img src="../common/img/ic-4.jpg" /><span>좋아요</span></a></li>
-								<li><a href="#"><img src="../common/img/ic-5.jpg" /><span>고객센터</span></a></li>
-							</ul>
-							<button type="button" class="btn-1">로그아웃</button>
-						</div>
-					</div>
-					
-					<!-- 검색 -->
-					<a href="" class="icon-search" data-toggle="modal" data-target="#myModal"><img src="../common/img/icon-3.png"></a>
-					
-				</div>
-			</div>
-			<div class="bab-bo">
-				<div class="ta-sho">
-					<a href="#"><span>Guide</span></a>
-				</div>
-				<div class="mab-rb">
-					<a href="#" class="mab-a"><span>Guide</span></a>
-					<ul class="mab-ul">
-						<li><a href="#"><img src="../common/img/icon-4.png" /> <span>거래방법</span></a></li>
-						<li><a href="#"><img src="../common/img/icon-5.png" /> <span>작가등록</span></a></li>
-						<li><a href="#"><img src="../common/img/icon-6.png" /> <span>작품등록</span></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
+		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		
 		<div class="body-wrap">
 			<div class="contents">
@@ -237,7 +172,7 @@
 		</div>
 		
 		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
-
+</div>
 <!-- 모달검색 -->
 
 
