--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -2,8 +2,15 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-	<meta charset="utf-8">
 	<title>딜링아트</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="theme-color" content="#000000">
+	<meta name="description" content="">
+	<meta name="author" content="">
 	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
 	<meta name="description" content="개인간 미술품 거래 마켓플레이스">
 	<meta property="og:description" content="개인간 미술품 거래 마켓플레이스">
@@ -12,9 +19,15 @@
 	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
 	<meta property="og:url" content="https://www.dealing-art.com">
 	
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- google -->
+    <meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
+    <!-- faceBook -->
+    <meta name="facebook-domain-verification" content="zrw9l0gyn4u5jja4qv7kpleb4i914k" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 	<!-- HTML의 <head> 섹션에 전체 사이트 태그를 복사합니다. -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WRJBSR52MT"></script>
+	
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
@@ -24,19 +37,21 @@
 	</script>
 	
 	<!-- Google Tag Manager -->
-	<!-- 페이지의 <head>에서 가능한 한 높은 위치에 코드를 붙여넣으세요. --!>
+	<!-- 페이지의 <head>에서 가능한 한 높은 위치에 코드를 붙여넣으세요. -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-NBP5CQ9');</script>
 	<!-- End Google Tag Manager -->
-	
+			
 	<!-- Google Tag Manager (noscript) -->
 	<!-- 또한 여는 <body> 태그 바로 뒤에 코드를 붙여넣으세요. -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBP5CQ9"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<noscript>
+		<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBP5CQ9"height="0" width="0" style="display:none; visibility:hidden"></iframe>
+	</noscript>
 	<!-- End Google Tag Manager (noscript) -->
+	
 	
 	<!-- 페이스북 Meta Pixel Code -->
 	<script>
@@ -51,18 +66,20 @@
 	  fbq('init', '5995234030505207');
 	  fbq('track', 'PageView');
 	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	  src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"
-	/></noscript>
-	
+	<noscript>
+		<img height="1" width="1" style="display:none"src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"/>
+	</noscript>
+    
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
+    	.swi-box::before{background-color:#f9f9f9;}
+    	.footer-wrap{margin-top:0;}
+    	.hd-div{background-color:#fff;}
+    	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
-  
+    <link rel="icon" type="image/png" href="resources/img/favicon.png">
 </head>
-
 <body>
 	<div class="wrap">
 		
@@ -391,7 +408,7 @@
 			</div>
 		</div>
 		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
-
+</div>
 <!-- 모달검색 -->
 
 
