딜 페이지 최근 등록순으로 변경 / 결제 수단 하이라이트 추가 / sms 문구 수정 / 회원탈퇴 페이지 화면 깨지는거 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -122,7 +122,7 @@
 								</div>
 								<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 									<div class="panel-body">
-										<input type="checkbox" id="a11" name="dealSttsCd" value="TP" class="searchOption" onclick="dealSearch()" checked/>
+										<input type="checkbox" id="a11" name="dealSttsCd" value="TP" class="searchOption" onclick="dealSearch()"/>
                                         <label for="a11"><span></span>진행 중인 거래</label><br/>
                                         <input type="checkbox" id="a22" name="dealSttsCd" value="TC" class="searchOption" onclick="dealSearch()"/>
                                         <label for="a22"><span></span>종료된 거래</label><br/>
@@ -286,7 +286,7 @@
 													<span>Deal wtith</span>
 												</div>
 												<div class="drop-body">
-                                                    <input type="radio" id="m3" name="authSq" value="1" class="searchOption"/>
+                                                    <input type="radio" id="m3" name="authSq" value="1" class="searchOption" checked/>
                                                     <label for="m3"><span></span>Collector</label><br/>
                                                     <input type="radio" id="m4" name="authSq" value="2" class="searchOption"/>
                                                     <label for="m4"><span></span>Artist</label>
@@ -297,13 +297,13 @@
 													<span>거래</span>
 												</div>
 												<div class="drop-body">
-                                                    <input type="checkbox" id="p1" name="dealSttsCd" value="IP" class="searchOption"/>
+                                                    <input type="checkbox" id="p1" name="dealSttsCd" value="TP" class="searchOption"/>
 													<label for="p1"><span></span>진행 중인 거래</label><br/>
-                                                    <input type="checkbox" id="p2" name="dealSttsCd" value="EN" class="searchOption"/>
+                                                    <input type="checkbox" id="p2" name="dealSttsCd" value="TC" class="searchOption"/>
 													<label for="p2"><span></span>종료된 거래</label><br/>
-                                                    <input type="checkbox" id="p3" name="dealTypCd" value="AUCT" class="searchOption"/>
+                                                    <input type="checkbox" id="p3" name="dealTypCd" value="A" class="searchOption"/>
 													<label for="p3"><span></span>경매</label><br/>
-                                                    <input type="checkbox" id="p4" name="dealTypCd" value="SALE" class="searchOption"/>
+                                                    <input type="checkbox" id="p4" name="dealTypCd" value="S" class="searchOption"/>
 													<label for="p4"><span></span>정찰가</label>
 												</div>
 											</li>
@@ -391,7 +391,7 @@
 								 
 							</div>
 						  	<div class="text-center mg_t50">
-<!-- 								<button type="button" class="btn-more" id="btn_more" onclick="dealSearchMore()"><span>more</span></button> -->
+								<!-- <button type="button" class="btn-more" id="btn_more" onclick="dealSearchMore()"><span>more</span></button> -->
 							</div>
 						</div>
 						
@@ -454,7 +454,7 @@
 						</div>
 						<div class="drop-body">
 							<div class="db-div">
-                                <input type="radio" id="s5" name ="authSq" value="1" class="searchOption"/>
+                                <input type="radio" id="s5" name ="authSq" value="1" class="searchOption" checked/>
                                 <label for="s5"><span></span>Collector</label>
 							</div>
 							<div class="db-div">
