--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5399,3 +5399,80 @@ position: relative;background-color: #fbfbfb;}
 }
 
 
+/* 0725 */
+.r-checks {position: relative;width: 93px;height: 75px;display: inline-block;background: #fff;/* border: #cccccc 1px solid; */vertical-align: top;text-align: center;position: relative;margin-right: 5px;}
+.r-checks input[type="radio"] {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip:rect(0,0,0,0);
+  border: 0;
+}
+.r-checks input[type="radio"] + label {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  display: block;
+  font-size: 0;
+  font-weight: 500;
+  color: #333333;
+  padding-top: 44px;
+}
+.r-checks input[type="radio"] + label:before {
+  /* content: ''; */
+  /* position: absolute; */
+  /* left: 0; */
+  /* top: -4px; */
+  /* width: 21px; */
+  /* height: 21px; */
+  /* text-align: center; */
+  /* background: #fafafa; */
+  /* border: 1px solid #cacece; */
+  /* border-radius: 100%; */
+  /* box-shadow: 0px 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05); */
+}
+.r-checks input[type="radio"] + label:active:before,
+.r-checks input[type="radio"]:checked + label:active:before  {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+.r-checks input[type="radio"]:checked + label:before {
+  background: #E9ECEE;
+  border-color: #adb8c0;
+}
+.r-checks input[type="radio"]:checked + label:after {
+  content: '';
+  position: absolute;
+  top: 1px;
+  left: 5px;
+  width: 13px;
+  height: 13px;
+}
+  
+.rch-1{ position: relative;}
+.rch-1 label:before{content:'';background-image: url(../img/icon/ro-1.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.rch-1 label:after{content:'';}
+.rch-2{ position: relative;}
+.rch-2 label:before{content:'';background-image: url(../img/icon/ro-2.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.rch-2 label:after{content:'';}
+.rch-3{ position: relative;}
+.rch-3 label:before{content:'';background-image: url(../img/icon/ro-3.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.rch-3 label:after{content:'';}
+.rch-4{ position: relative;}
+.rch-4 label:before{content:'';background-image: url(../img/icon/ro-4.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.rch-4 label:after{content:'';}
+.rch-5{ position: relative;}
+.rch-5 label:before{content:'';background-image: url(../img/icon/ro-5.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.rch-5 label:after{content:'';}
+
+
+.r-checks.rch-1 input[type="radio"]:checked + label:before{content:'';background-image: url(../img/icon/ro-1-on.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.r-checks.rch-2 input[type="radio"]:checked + label:before{content:'';background-image: url(../img/icon/ro-2-on.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.r-checks.rch-3 input[type="radio"]:checked + label:before{content:'';background-image: url(../img/icon/ro-3-on.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.r-checks.rch-4 input[type="radio"]:checked + label:before{content:'';background-image: url(../img/icon/ro-4-on.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
+.r-checks.rch-5 input[type="radio"]:checked + label:before{content:'';background-image: url(../img/icon/ro-5-on.jpg);width: 92px;height: 76px;background-size: 100%;position: absolute;left: 0;top: 0;}
