--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -1585,7 +1585,7 @@ function dealReg(){
 	        contentType : false,
 	        processData : false,
 	        success: function(data) {
-	        	if(data > 0 || data != null || data != ""){
+	        	if(data > 0){
 	        		if(result.work.workTypCd == "COLL"){
 	        			modalAlertShow("거래가 등록되었습니다.", "myCollection");
 	        		}else if(result.work.workTypCd == "WORK"){
@@ -1594,6 +1594,14 @@ function dealReg(){
 	        			modalAlertShow("거래가 등록되었습니다.", "main");
 	        		}
 	        		
+	        	}
+	        	if(data == -2){
+	        		if(result.work.workTypCd == "COLL"){
+	        			modalAlertShow("해당 작품은 이미 거래 등록 되어있습니다.", "myCollection");
+	        		}
+	        		if(result.work.workTypCd == "WORK"){
+	        			modalAlertShow("해당 작품은 이미 거래 등록 되어있습니다.", "myWork");
+	        		}
 	        	}
 	        },
 	        error: function(error) {
