--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -221,10 +221,30 @@
 									
 										<div class="mbox-1">
 											<div class="pay-link">
-												<a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-2.png" /><span>신용카드</span></a>
+												<div class="r-checks rch-1">
+													<input type="radio" id="rd1" name="paymethod" value="CARD" onclick="btn_paymethod_onclick(this)">
+													<label for="rd1">신용카드</label>
+												</div>
+												<div class="r-checks rch-4">
+													<input type="radio" id="rd4" name="paymethod" value="VACCT" onclick="btn_paymethod_onclick(this)">
+													<label for="rd4">가상계좌</label>
+												</div>
+												<!-- <div class="r-checks rch-2">
+													<input type="radio" id="rd2" name="paymethod">
+													<label for="rd2">무통장입금</label>
+												</div> -->
+												<!-- <div class="r-checks rch-3">
+													<input type="radio" id="rd3" name="paymethod">
+													<label for="rd3">실시간계좌이체</label>
+												</div> -->
+												<!-- <div class="r-checks rch-5">
+													<input type="radio" id="rd5" name="paymethod">
+													<label for="rd5">카카오페이</label>
+												</div> -->
+												<!-- <a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-2.png" /><span>신용카드</span></a> -->
 												<!-- <a href="#" class="pay-2" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-3.png" /><span>무통장입금</span></a> -->
 												<!-- <a href="javascript:void(0);" class="pay-3" value="ACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-6.png" /><span>실시간계좌이체</span></a> -->
-												<a href="javascript:void(0);" class="pay-4" value="VACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-4.png" /><span>가상계좌</span></a>
+												<!-- <a href="javascript:void(0);" class="pay-4" value="VACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-4.png" /><span>가상계좌</span></a> -->
 												<!-- <a href="#" class="pay-5" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-5.png" /><span>카카오페이</span></a> -->
 											</div>
 											<div class="bat-box3 mg_t30">
@@ -803,7 +823,7 @@ function updateNewAddr(){
  * 결제 수단 클릭시
  */
 function btn_paymethod_onclick(obj){
-	result.dealInfo.paymethod = obj.attributes.value.value;
+	result.dealInfo.paymethod = $('input[name=paymethod]:checked').val();
 	if(result.dealInfo.buyPaymntSttsCd != "2PW"){
 		if(result.dealInfo.paymethod == "CARD"){
 			feeCal();
